link.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    linkerd.io/extension: multicluster
    component: service-mirror
    mirror.linkerd.io/cluster-name: k3d-x
  name: linkerd-service-mirror-k3d-x
  namespace: linkerd-multicluster
spec:
  replicas: 1
  selector:
    matchLabels:
      component: linkerd-service-mirror
      mirror.linkerd.io/cluster-name: k3d-x
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        component: linkerd-service-mirror
        mirror.linkerd.io/cluster-name: k3d-x
    spec:
      containers:
      - args:
        - service-mirror
        - -log-level=debug
        - -event-requeue-limit=3
        - -namespace=linkerd-multicluster
        - -enable-headless-services
        - k3d-x
        image: cr.l5d.io/linkerd/controller:dev-e0ce5f08-kevin
        name: service-mirror
        securityContext:
          runAsUser: 2103
        ports:
        - containerPort: 9999
          name: admin-http
      serviceAccountName: linkerd-service-mirror-k3d-x
---
apiVersion: v1
kind: Service
metadata:
  name: probe-gateway-k3d-x
  namespace: linkerd-multicluster
  labels:
    mirror.linkerd.io/mirrored-gateway: "true"
    mirror.linkerd.io/cluster-name: k3d-x
spec:
  ports:
  - name: mc-probe
    port: 4191
    protocol: TCP
---
