original-booksapp.yml
---
apiVersion: v1
kind: Service
metadata:
  name: webapp
  labels:
    app: webapp
    project: booksapp
spec:
  selector:
    app: webapp
  type: LoadBalancer
  ports:
  - name: service
    port: 7000
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: webapp
  labels:
    app: webapp
    project: booksapp
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: webapp
        project: booksapp
    spec:
      dnsPolicy: ClusterFirst
      containers:
      - name: service
        image: buoyantio/booksapp:v0.0.3
        args: ["prod:webapp"]
        readinessProbe:
          httpGet:
            path: /ping
            port: 7000
        ports:
        - name: service
          containerPort: 7000
---
apiVersion: v1
kind: Service
metadata:
  name: authors
  labels:
    app: authors
    project: booksapp
spec:
  selector:
    app: authors
  clusterIP: None
  ports:
  - name: service
    port: 7001
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: authors
  labels:
    app: authors
    project: booksapp
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: authors
        project: booksapp
    spec:
      dnsPolicy: ClusterFirst
      containers:
      - name: service
        image: buoyantio/booksapp:v0.0.3
        args: ["prod:authors"]
        readinessProbe:
          httpGet:
            path: /ping
            port: 7001
        ports:
        - name: service
          containerPort: 7001
---
apiVersion: v1
kind: Service
metadata:
  name: books
  labels:
    app: books
    project: booksapp
spec:
  selector:
    app: books
  clusterIP: None
  ports:
  - name: service
    port: 7002
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: books
  labels:
    app: books
    project: booksapp
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: books
        project: booksapp
    spec:
      dnsPolicy: ClusterFirst
      containers:
      - name: service
        image: buoyantio/booksapp:v0.0.3
        args: ["prod:books"]
        readinessProbe:
          httpGet:
            path: /ping
            port: 7002
        ports:
        - name: service
          containerPort: 7002
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: traffic
  labels:
    app: traffic
    project: booksapp
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: traffic
        project: booksapp
    spec:
      dnsPolicy: ClusterFirst
      containers:
      - name: traffic
        image: buoyantio/booksapp-traffic:v0.0.3
        args:
        - "-initial-delay=30s"
        - "webapp:7000"
