terminus.yaml
## TERMINUS
---
kind: Service
apiVersion: v1
metadata:
  name: terminus
spec:
  selector:
    app: terminus
  ports:
  - name: http
    port: 8888
    targetPort: 8888
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: terminus
  name: terminus
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: terminus
    spec:
      containers:
      - image: buoyantio/bb:latest
        imagePullPolicy: Always
        name: terminus
        command:
        - "/bin/bash"
        args:
        - "-c"
        - |
          exec \
          /out/bb terminus \
          --log-level debug \
          --h1-server-port=8888 \
          --percent-failure 15 \
          --response-text=BANANA0
        ports:
        - containerPort: 8888
          name: http


# SLOW COOKER
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: slow-cooker
  name: slow-cooker
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: slow-cooker
    spec:
      containers:
      - image: buoyantio/slow_cooker:1.2.0
        imagePullPolicy: IfNotPresent
        name: slow-cooker
        command:
        - "/bin/sh"
        args:
        - "-c"
        - |
          sleep 10 # wait for pods to start
          slow_cooker \
            -qps 10 \
            -concurrency 1 \
            -interval 10s \
            -metric-addr 0.0.0.0:9990 \
            http://terminus:8888
        ports:
        - name: slow-cooker
          containerPort: 9990
